[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Card/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Card/Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Table/Table.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Card/PlayedCards.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="CardController" type="Node" parent="."]

[node name="Deck_1" parent="CardController" instance=ExtResource( 2 )]

[node name="SprinterHand" parent="CardController" groups=["players"] instance=ExtResource( 3 )]

[node name="PlayedCards" parent="CardController" instance=ExtResource( 5 )]

[node name="DrawButton" type="Button" parent="CardController"]
margin_left = 234.0
margin_top = 126.0
margin_right = 257.0
margin_bottom = 156.0
text = "s"

[node name="Table" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="CardController/DrawButton" to="." method="_on_DrawButton_pressed"]
